fix spacing on EitanInfoBox and Buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
-  font-family: "Times New Roman";
-  margin-left: 0rem;
-  background-color: transparent;
+  /* font-family: "Times New Roman"; */
+  /* margin-left: 0rem; */
+  /* background-color: transparent; */
 
 }
 h1,
@@ -439,13 +439,17 @@ a {
   background-position: 80% 80%;
   border: 4px solid black;
   background-position: 90% 5%;
-  padding: 4rem;
+  /* padding: 4rem; */
+  /* padding-top: 2rem; */
+  padding-bottom: 2rem;
+  /* padding:2rem; */
 }
 
 .EitanInfoButtons {
   position:relative;
-  /* margin: 0rem; */
-  /* margin-right: 12rem; */
+  
+  /* margin:10rem; */
+  margin-top: 2rem;
 }
 
 #eitansProfilePic {
